--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
   --color-secondary: #c9d6df;
   --color-tertiary: #f0f5f9;
   --color-accent: #53585e;
+  --color-dark-accent: #394149;
   --title-font-family: "Montserrat", sans-serif;
   --content-font-family: "Inter", sans-serif;
   --border-radius: 0.9375rem;
@@ -12,7 +13,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: max(260px, 20%) 1fr;
+  grid-template-columns: max(260px, 18%) 1fr;
   grid-template-rows: 100px 1fr;
   min-height: 100vh;
   min-width: 100vw;
@@ -40,8 +41,12 @@
   background-image: url("assets/profile.png");
   background-size: cover;
   aspect-ratio: 1 / 1;
-  height: 25%;
-  border-radius: 50%;
+  border-radius: 100%;
+  height: 80%;
+}
+
+.profile-picture.large {
+  height: max(130px, 20vh);
 }
 
 .links {
@@ -59,11 +64,13 @@
   text-decoration: none;
   color: white;
   font-weight: 900;
-  font-size: 1.5rem;
+  font-size: clamp(1.25rem, 0.4787rem + 0.8511vw, 1.5rem);
   padding: 1rem;
   border-radius: 0 1.5rem 1.5rem 0;
   border-left: 4px solid transparent;
-  transition: background 0.2s ease-in-out, border 0.2s ease-in-out;
+  transition:
+    background 0.2s ease-in-out,
+    border 0.2s ease-in-out;
 }
 
 .links li a:hover {
@@ -71,9 +78,12 @@
   border-left: 4px solid white;
 }
 
+.icon {
+  filter: invert(100%);
+}
+
 .links .icon {
   height: 2rem;
-  filter: invert(100%);
   margin-right: 5%;
 }
 
@@ -97,23 +107,121 @@
 }
 
 .greet-container p {
+  font-size: clamp(1rem, 0.0745rem + 1.0213vw, 1.3rem);
   font-weight: 600;
 }
 
 .greet-container .username {
   font-weight: 800;
-  font-size: 2rem;
+  font-size: clamp(1.5rem, -0.0426rem + 1.7021vw, 2rem);
 }
 
 header {
   grid-column: 2;
   background-color: var(--color-tertiary);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px 0 #a9bbc9;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header button {
+  all: unset;
+  cursor: pointer;
 }
 
 main {
   grid-row: 2;
   grid-column: 2;
   background-color: var(--color-secondary);
+}
+
+.search-container {
+  position: relative;
+}
+
+#search {
+  background-color: var(--color-tertiary);
+  border-radius: 5rem;
+  border: 2px solid var(--color-accent);
+  padding: 0.5rem 1rem;
+  font-family: var(--content-font-family);
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--color-accent);
+  width: max(200px, 20vw)
+}
+
+.search-container label {
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+  font-family: var(--content-font-family);
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: var(--color-accent);
+  position: absolute;
+  padding: 0 0.5rem;
+  transition:
+    left 0.2s ease-in-out,
+    top 0.2s ease-in-out,
+    font-size 0.2s ease-in-out,
+    background-color .2s ease-in-out;
+}
+
+.search-container input:focus + label,
+.search-container input:not(:placeholder-shown) + label {
+  background-color: var(--color-tertiary);
+  font-size: .8rem;
+  left: 7%;
+  top: 0;
+}
+
+#search:focus {
+  outline: none;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-left: 1rem;
+}
+
+.search-container .search-btn {
+  background-color: var(--color-accent);
+  padding: 0.5rem;
+  border-radius: 24px;
+}
+
+.tools-container {
+  height: 100%;
+  margin-right: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1;
+  gap: 1rem;
+}
+
+.tools-container .new-btn {
+  font-family: var(--content-font-family);
+  background-color: var(--color-accent);
+  padding: 1rem 2rem;
+  color: white;
+  border-radius: var(--border-radius);
+}
+
+.tools-container button:not(:first-child) {
+  background-color: var(--color-accent);
+  padding: .5rem;
+  cursor: pointer;
+  border-radius: 24px;
+  aspect-ratio: 1 / 1;
+  width: auto;
+}
+
+.tools-container button:hover {
+  background-color: var(--color-dark-accent);
 }
