--- a/index.css
+++ b/index.css
@@ -126,10 +126,6 @@ header {
   justify-content: space-between;
 }
 
-header button {
-  all: unset;
-  cursor: pointer;
-}
 
 main {
   grid-row: 2;
@@ -190,7 +186,6 @@ main {
 }
 
 .search-container .search-btn {
-  background-color: var(--color-accent);
   padding: 0.5rem;
   border-radius: 24px;
 }
@@ -199,29 +194,34 @@ main {
   height: 100%;
   margin-right: 1rem;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
-  flex: 1;
   gap: 1rem;
 }
 
 .tools-container .new-btn {
   font-family: var(--content-font-family);
-  background-color: var(--color-accent);
   padding: 1rem 2rem;
   color: white;
   border-radius: var(--border-radius);
 }
 
 .tools-container button:not(:first-child) {
-  background-color: var(--color-accent);
   padding: .5rem;
-  cursor: pointer;
   border-radius: 24px;
   aspect-ratio: 1 / 1;
   width: auto;
+  height: 30%;
 }
 
-.tools-container button:hover {
+header button {
+  all: unset;
+  cursor: pointer;
+  background-color: var(--color-accent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header button:hover {
   background-color: var(--color-dark-accent);
 }
