--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
   grid-template-columns: max(260px, 18%) 1fr;
   grid-template-rows: 100px 1fr;
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100vw;
 }
 
 .divide-line {
@@ -42,7 +42,7 @@
   background-size: cover;
   aspect-ratio: 1 / 1;
   border-radius: 100%;
-  height: 80%;
+  height: 64px;
 }
 
 .profile-picture.large {
@@ -121,16 +121,10 @@ header {
   background-color: var(--color-tertiary);
   box-shadow: 0 4px 4px 0 #a9bbc9;
   z-index: 1;
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 150px 1fr;
   justify-content: space-between;
-}
-
-
-main {
-  grid-row: 2;
-  grid-column: 2;
-  background-color: var(--color-secondary);
+  align-items: center;
 }
 
 .search-container {
@@ -139,19 +133,19 @@ main {
 
 #search {
   background-color: var(--color-tertiary);
-  border-radius: 5rem;
+  border-radius: var(--border-radius);
   border: 2px solid var(--color-accent);
   padding: 0.5rem 1rem;
   font-family: var(--content-font-family);
   font-size: 1.2rem;
   font-weight: 700;
   color: var(--color-accent);
-  width: max(200px, 20vw)
+  width: max(200px, 20vw);
 }
 
 .search-container label {
   top: 50%;
-  left: 5%;
+  left: 3%;
   transform: translateY(-50%);
   font-family: var(--content-font-family);
   font-size: 1.2rem;
@@ -160,18 +154,16 @@ main {
   position: absolute;
   padding: 0 0.5rem;
   transition:
-    left 0.2s ease-in-out,
     top 0.2s ease-in-out,
     font-size 0.2s ease-in-out,
-    background-color .2s ease-in-out;
+    background-color 0.2s ease-in-out;
 }
 
 .search-container input:focus + label,
 .search-container input:not(:placeholder-shown) + label {
   background-color: var(--color-tertiary);
-  font-size: .8rem;
-  left: 7%;
-  top: 0;
+  font-size: 0.8rem;
+  top: 10%;
 }
 
 #search:focus {
@@ -179,6 +171,7 @@ main {
 }
 
 .search-container {
+  grid-column: 1;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -186,12 +179,13 @@ main {
 }
 
 .search-container .search-btn {
-  padding: 0.5rem;
-  border-radius: 24px;
+  padding: 0.8rem;
+  border-radius: 100%;
 }
 
 .tools-container {
-  height: 100%;
+  justify-self: self-end;
+  grid-column: 3;
   margin-right: 1rem;
   display: flex;
   align-items: center;
@@ -205,12 +199,10 @@ main {
   border-radius: var(--border-radius);
 }
 
-.tools-container button:not(:first-child) {
-  padding: .5rem;
-  border-radius: 24px;
+.tools-container button:not(:first-of-type) {
+  padding: 0.8rem;
+  border-radius: 100%;
   aspect-ratio: 1 / 1;
-  width: auto;
-  height: 30%;
 }
 
 header button {
@@ -224,4 +216,12 @@ header button {
 
 header button:hover {
   background-color: var(--color-dark-accent);
+}
+
+main {
+  grid-row: 2;
+  grid-column: 2;
+  background-color: var(--color-secondary);
+  display: grid;
+  grid-template-rows: 10% 1fr;
 }
